// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`r-select.vue should render Wrapper and match snapshot 1`] = `
<div class="fs-block">
  <!---->
  <div tabindex="-1" role="combobox" aria-owns="listbox-id" class="r-select r-field r-select-is-allow-empty">
    <r-icon-stub icon="caret-down" class="r-select-caret"></r-icon-stub>
    <div class="r-select-tags">
      <div class="r-select-tags-wrap" style="display: none;"></div>
      <!---->
      <transition-stub name="r-select-loading">
        <div class="r-select-loading-spinner" style="display: none;"></div>
      </transition-stub> <input name="" id="id" type="text" autocomplete="off" spellcheck="false" placeholder="Select option" tabindex="0" aria-controls="listbox-id" class="r-select-input" style="width: 0px; position: absolute; padding: 0px;">
      <!----> <span class="r-select-placeholder">
                    Select option
                </span>
    </div>
    <transition-stub name="r-select">
      <div tabindex="-1" class="r-select-content-wrapper" style="max-height: 300px; display: none;">
        <ul role="listbox" id="listbox-id" class="r-select-content" style="display: inline-block; min-width: 100%;">
          <!---->
          <!---->
          <!---->
          <li id="id-0" role="[object Object]" class="r-select-content-element"><span class="r-select-content-element-option r-select-option-is-highlight"><span>1</span></span></li>
          <li id="id-1" role="[object Object]" class="r-select-content-element"><span class="r-select-content-element-option"><span>2</span></span></li>
          <li class="r-select-content-element" style="display: none;"><span class="r-select-content-element-option">No elements found. Consider changing the search query.
                            </span></li>
          <li class="r-select-content-element" style="display: none;"><span class="r-select-content-element-option">List is empty.</span></li>
          <!---->
        </ul>
      </div>
    </transition-stub>
  </div>
  <!---->
</div>
`;

exports[`r-select.vue should render via SSR and match snapshot 1`] = `
<div>
  <!---->
  <div tabindex="-1" role="combobox" aria-owns="listbox-id" class="r-select r-field r-select-is-allow-empty"><svg class="r-icon r-icon-20 r-select-caret">
      <use xlink:href="#icon-caret-down" xmlns:xlink="http://www.w3.org/1999/xlink"></use>
    </svg>
    <div class="r-select-tags">
      <div class="r-select-tags-wrap" style="display:none;"></div>
      <!---->
      <transition-stub name="r-select-loading">
        <div class="r-select-loading-spinner" style="display:none;"></div>
      </transition-stub> <input name="" id="id" type="text" autocomplete="off" spellcheck="false" placeholder="Select option" tabindex="0" aria-controls="listbox-id" value="" class="r-select-input" style="width:0;position:absolute;padding:0;">
      <!----> <span class="r-select-placeholder">
                    Select option
                </span>
    </div>
    <transition-stub name="r-select">
      <div tabindex="-1" class="r-select-content-wrapper" style="max-height:300px;display:none;">
        <ul role="listbox" id="listbox-id" class="r-select-content" style="display:inline-block;min-width:100%;">
          <!---->
          <!---->
          <!---->
          <li id="id-0" role="[object Object]" class="r-select-content-element"><span class="r-select-content-element-option r-select-option-is-highlight"><span>1</span></span></li>
          <li id="id-1" role="[object Object]" class="r-select-content-element"><span class="r-select-content-element-option"><span>2</span></span></li>
          <li class="r-select-content-element" style="display:none;"><span class="r-select-content-element-option">No elements found. Consider changing the search query.
                            </span></li>
          <li class="r-select-content-element" style="display:none;"><span class="r-select-content-element-option">List is empty.</span></li>
          <!---->
        </ul>
      </div>
    </transition-stub>
  </div>
  <!---->
</div>
`;
